# claude-log-doctor

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  buggy_app.py
src/claude_log_doctor/: __init__.py  audit.py  budget.py  classifier.py  cli.py  config.py  default_config.yaml  default_rules.json  log_scanner.py  loop.py  notifier.py  repair.py  safety.py
tests/: conftest.py  test_budget.py  test_classifier.py  test_config.py  test_log_scanner.py  test_safety.py
